<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20.0dip"
    android:layout_marginStart="15.0dip"
    android:layout_marginEnd="15.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="160.0dip"
        android:layout_height="130.0dip"
        android:layout_marginTop="30.0dip"
        android:layout_marginBottom="25.0dip"
        android:src="@mipmap/ic_data_empty" />
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:id="@id/llError"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18.0sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_upi_error_title" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:id="@id/tvErrorDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/author_upi_error_description_1" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:id="@id/tvErrorDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/author_upi_error_description_2" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/author_upi_error_description_3" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/author_upi_error_description_4" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:id="@id/llEmpty"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18.0sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_upi_empty_title" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/author_upi_empty_description_1" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:id="@id/tvEmptyDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/author_upi_empty_description_2" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/author_upi_empty_description_3" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/author_upi_empty_description_4" />
        <TextView
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_ff5159"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/author_upi_empty_description_5" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@id/llRefreshBtn"
        android:background="@drawable/shape_12dp_365eee"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_marginTop="30.0dip"
        android:paddingStart="15.0dip"
        android:paddingEnd="15.0dip">
        <ImageView
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@mipmap/ic_upi_refresh" />
        <TextView
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:layout_marginStart="5.0dip" />
    </LinearLayout>
</LinearLayout>