<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@mipmap/ic_dialog_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15.0dip"
        android:layout_marginEnd="15.0dip">
        <TextView
            android:textSize="18.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_b71c1c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25.0dip"
            android:text="@string/buy_payment_cancel_order" />
        <TextView
            android:textSize="14.0sp"
            android:textColor="@color/color_616161"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/buy_payment_cancel_order_transaction"
            android:layout_marginStart="15.0dip"
            android:layout_marginEnd="15.0dip" />
        <TextView
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_d32f2f"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/buy_payment_cancel_order_sure"
            android:layout_marginStart="15.0dip"
            android:layout_marginEnd="15.0dip" />
        <LinearLayout
            android:orientation="horizontal"
            android:id="@id/llBtn"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginTop="25.0dip"
            android:layout_marginBottom="20.0dip"
            android:layout_marginStart="15.0dip"
            android:layout_marginEnd="15.0dip">
            <TextView
                android:textSize="14.0sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@id/tvYes"
                android:background="@drawable/shape_16dp_c62828"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:text="@string/buy_payment_cancel_order_yes"
                android:layout_weight="1.0" />
            <TextView
                android:textSize="14.0sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@id/tvNo"
                android:background="@drawable/shape_16dp_365eee"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:text="@string/buy_payment_cancel_order_continue"
                android:layout_weight="1.0"
                android:layout_marginStart="10.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>